eubusiness.com (archived on 2002-06-03)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;newsandmedia",
  "char_count": 5393,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.88,
  "homepage_snapshot_redirected_domain": "eubusiness.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020528194941id_/http://www.eubusiness.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020528194941id_/http%3A//eubusiness.com",
  "interval": "2002_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "eubusiness.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020603072319id_/http%3A//www.eubusiness.com/help/help_privacy.html",
  "policy_title": "EUbusiness - Help Section - Privacy Statement",
  "policy_url": "eubusiness.com/help/help_privacy.html",
  "sha1": "34d3b4025c2f39aef04cf3e3d40a10ac9bf6196b",
  "simhash": 4679367275687725743,
  "simhash_updated": false,
  "site_hostname": "eubusiness.com",
  "site_url": "http://eubusiness.com",
  "smog": 14.27,
  "strict_updated": false,
  "timestamp": "20020603072319",
  "word_count": 883,
  "year": 2002
}

--- a/e/eu/eub/eubusiness.com.html
+++ b/e/eu/eub/eubusiness.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the eubusiness.com privacy policy that was archived on 2001-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010603051914id_/http%3A//www.eubusiness.com/help/help_privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the eubusiness.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603072319id_/http%3A//www.eubusiness.com/help/help_privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN"><html><head>
 <title>EUbusiness - Help Section - Privacy Statement</title>
@@ -11,102 +11,71 @@
 <body>
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
-<td width="125" height="97" bgcolor="#0099CC"><a href="/index.html"><img src="../images/logo_v5_eu.gif" width="125" height="97" border="0" alt="EU business European Union"></a></td>
+<td width="125" height="97" bgcolor="#0099CC"><a href="/index.html"><img src="/images/logo_v5_eu.gif" width="125" height="97" border="0" alt="EU business European Union"></a></td>
 
 <td>
-<table cellspacing="3" cellpadding="2"><tbody><tr><td>
+<table cellspacing="0" cellpadding="1"><tbody><tr><td>
 <!-- This is the banner ad at the top of the page -->
-<!--Begin Engage Media Ad Copyright 2000  Engage Media.
-
-All rights reserved. Patent Pending -->
-
-<script language="JAVASCRIPT">
-
-
-<!-- // DO NOT EDIT THIS PAGE -  DO NOT SAVE UNDER WINDOWS dalmond@sift.co.uk
-
-
-FlycastSite = "3566512_EUBusiness";
-
-FlycastPage = "12371314_ROS";
-
-FlycastWidth = 468;
-
-FlycastHeight = 60;
-
-FlycastPrintTag = true;
-
-FlycastNewAd = true;
-
-FlycastEnableTargetWindow = false;
-
-FlycastKeyword = "";
-
-FlycastLoaded = false;
-
-FlycastVersion = 3.6;
-
-//-->
-
-</script>
-
-<script src="http://b2b-js.flycast.com/FlycastUniversal/Version3.6/" language="JAVASCRIPT"></script>
-
-<script language="JAVASCRIPT">
-
-<!--
-
-    if (!FlycastLoaded) document.write('<A target="_top" HREF="http://b2b-ad.flycast.com/server/click/3566512_EUBusiness/12371314_ROS/123"><IMG WIDTH=468 HEIGHT=60 BORDER=0 SRC="http://b2b-ad.flycast.com/server/ad/3566512_EUBusiness/12371314_ROS/123"></A>');
-
-//-->
-
-</script><a target="_top" href="http://b2b-ad.flycast.com/server/click/3566512_EUBusiness/12371314_ROS/123"><img width="468" height="60" border="0" src="http://b2b-ad.flycast.com/server/ad/3566512_EUBusiness/12371314_ROS/123"></a>
-
+<!--- OAS ADVERT [Top] derek [at]  sift.co.uk = Hybrid Tagging::
+//qstring:AREA=EUB&POSITION=TOP&FRAME=_SELF&WIDTH=468&HEIGHT=60&SITE=EUBUSINESS
+//catagory_cs:
+//dsearch:
+//searchterms:
+--->
+<script language="JavaScript"> <!-- 
+var server = 'multi1.rmuk.co.uk/';
+var sitepage = 'www.eubusiness.com/help/help_privacy.html';
+OAS_query = '?AREA=EUB&POSITION=TOP&FRAME=_SELF&WIDTH=468&HEIGHT=60&SITE=EUBUSINESS&cats=';
+var position ="Top";
+var RNS = '24334' ;
+var oas='http://' + server + '/RealMedia/ads/';
+var oaspage= sitepage + '/1' + RNS + '@' + position;
+  document.write ('<SCRIPT LANGUAGE="JavaScript1.1" SRC="' + oas + 'adstream_jx.ads/' + oaspage + OAS_query + '">');
+  document.write ('\<\!-- --\>');
+  document.write ('\<\/SCRIPT\>');
+  document.write ('<noscript><A HREF="' + oas + 'click_nx.ads/'+ oaspage + OAS_query + '" TARGET="_self" ><IMG SRC="' + oas + 'adstream_nx.ads/' + oaspage + OAS_query + '"  BORDER="0"  WIDTH="468" HEIGHT="60"  ALT="" ></a></noscript>');
+  document.write ('\<\!-- --\>');
+// -->
+</script><script language="JavaScript1.1" src="http://multi1.rmuk.co.uk//RealMedia/ads/adstream_jx.ads/www.eubusiness.com/help/help_privacy.html/124334@Top?AREA=EUB&amp;POSITION=TOP&amp;FRAME=_SELF&amp;WIDTH=468&amp;HEIGHT=60&amp;SITE=EUBUSINESS&amp;cats="><!-- --></script><noscript><A HREF="http://multi1.rmuk.co.uk//RealMedia/ads/click_nx.ads/www.eubusiness.com/help/help_privacy.html/124334@Top?AREA=EUB&POSITION=TOP&FRAME=_SELF&WIDTH=468&HEIGHT=60&SITE=EUBUSINESS&cats=" TARGET="_self" ><IMG SRC="http://multi1.rmuk.co.uk//RealMedia/ads/adstream_nx.ads/www.eubusiness.com/help/help_privacy.html/124334@Top?AREA=EUB&POSITION=TOP&FRAME=_SELF&WIDTH=468&HEIGHT=60&SITE=EUBUSINESS&cats="  BORDER="0"  WIDTH="468" HEIGHT="60"  ALT="" ></a></noscript><!-- -->
 <noscript>
-
-    <IFRAME SRC="http://b2b-ad.flycast.com/server/iframe/3566512_EUBusiness/12371314_ROS/123" scrolling="no" marginwidth=0 marginheight=0 frameborder=0 vspace=0 hspace=0 WIDTH=468 HEIGHT=60>
-
-    <A target="_top" HREF="http://b2b-ad.flycast.com/server/click/3566512_EUBusiness/12371314_ROS/123"><IMG BORDER=0 WIDTH=468 HEIGHT=60 SRC="http://b2b-ad.flycast.com/server/img/3566512_EUBusiness/12371314_ROS/123"></A>
-
-    </IFRAME>
-
+<A HREF="http://multi1.rmuk.co.uk/RealMedia/ads/click_nx.cgi/www.eubusiness.com/help/help_privacy.html/24334@Top?AREA=EUB&POSITION=TOP&FRAME=_SELF&WIDTH=468&HEIGHT=60&SITE=EUBUSINESS&cats=" target="_self">
+<IMG width="468" height="60" border=0 SRC="http://multi1.rmuk.co.uk/RealMedia/ads/adstream_nx.cgi/www.eubusiness.com/help/help_privacy.html/24334@Top?AREA=EUB&POSITION=TOP&FRAME=_SELF&WIDTH=468&HEIGHT=60&SITE=EUBUSINESS&cats=">
+</a>
 </noscript>
+<!---END OAS ADVERT [Top] derek [at]   sift.co.uk = Hybrid Tagging:: -->
 
-<!--End Engage Media Ad Copyright 2000 Engage Media. All rights reserved
 
- Patent Pending -->
 </td>
 <td>
 
-
 <table border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
-<form action="/cgi-bin/fx?" method="post"></form>
+<form action="/cgi-bin/item.cgi" method="get"></form>
 <input type="hidden" name="search" value="1">
 <input type="hidden" name="MAXHITS" value="10">
 <input type="hidden" name="TOPDOC" value="0">
-<td colspan="4"><font class="heading">Search EUbusiness</font></td>
+<td><font class="heading">Search EUbusiness</font></td>
 </tr>
 <tr>
-<td><input type="Radio" name="DB" value="eub_news" align="LEFT" checked=""></td>
-<td width="25"><font class="search">News</font></td>
-<td rowspan="2"><input type="Text" name="P" value="" align="LEFT" size="14"></td>
-<td rowspan="2">&nbsp;<input type="image" src="/images/buttons/search.gif" value="Search" border="0"></td>
+<td>
+<input type="Text" name="body" size="14" value="">&nbsp;
+</td>
 </tr>
 <tr>
-<td><input type="Radio" name="DB" value="eub_lase" align="LEFT"></td>
-<td><font class="search">Web Links&nbsp;</font></td>
+<td>
+<input type="image" src="/images/buttons/search.gif" width="50" height="18" border="0" value="Search">
+</td>
+</tr>
 
-</tr>
+
 </tbody></table>
-
 
 </td>
 </tr></tbody></table>
 <table width="99%" border="0" cellspacing="0" cellpadding="0"><tbody><tr>
-    <td rowspan="3"><img src="/images/logo_v5_business.gif" width="110" height="37" border="0" alt=""></td>
+    <td rowspan="3"><img src="/images/logo_v5_business.gif" width="85" height="37" border="0" alt=""></td>
       <td width="100%" nowrap=""><img src="/images/spacer.gif" width="1" height="1" border="0" alt=""></td>
-    <td width="70%" rowspan="3" align="LEFT" valign="BOTTOM" nowrap=""><a href="/cgi-site/eubjobs.cgi"><img src="../images/but_topnav_jobs.gif" width="48" height="37" alt="Jobs" border="0"></a><a href="/cgi-site/eubconsultants.cgi"><img src="../images/but_topnav_consultants.gif" width="87" height="37" alt="Consultants" border="0"></a><a href="/presszone"><img src="/images/but_topnav_presszone.gif" width="82" height="37" border="0" alt="PressZone"></a><a href="/help/anyanswers.html"><img src="/images/but_topnav_anyanswers.gif" width="92" height="37" border="0" alt="Any Answers"></a><a href="/workshop/index.html"><img src="/images/but_topnav_chat.gif" width="65" height="37" border="0" alt="Chat"></a><a href="/discussion/"><img src="/images/but_topnav_forums.gif" width="65" height="37" border="0" alt="Discussion Forum"></a><a href="../poll/index.html"><img src="/images/but_topnav_poll.gif" width="65" height="37" border="0" alt="Poll"></a><a href="/help/feedback.html"><img src="/images/but_topnav_feedback.gif" width="72" height="37" border="0" alt="Feedback"></a></td>
+    <td width="70%" rowspan="3" align="LEFT" valign="BOTTOM" nowrap=""><a href="/events/"><img src="/images/but_topnav_events.gif" width="61" height="37" alt="Events" border="0"></a><a href="/cgi-site/eubconsultants.cgi"><img src="/images/but_topnav_consultants.gif" width="87" height="37" alt="Consultants" border="0"></a><a href="/presszone"><img src="/images/but_topnav_presszone.gif" width="82" height="37" border="0" alt="PressZone"></a><a href="/help/anyanswers.html"><img src="/images/but_topnav_anyanswers.gif" width="92" height="37" border="0" alt="Any Answers"></a><a href="/workshop/index.html"><img src="/images/but_topnav_chat.gif" width="53" height="37" border="0" alt="Workshop"></a><a href="/discussion/"><img src="/images/but_topnav_forums.gif" width="65" height="37" border="0" alt="Business Forum"></a><a href="/help/feedback.html"><img src="/images/but_topnav_feedback.gif" width="72" height="37" border="0" alt="Feedback"></a></td>
 </tr>
 <tr>
     <td bgcolor="#0099CC"><img src="/images/spacer.gif" width="1" height="28" border="0" alt=""></td>
@@ -131,7 +100,7 @@ FlycastVersion = 3.6;
 		</script>Thur 30 Jan
 		</font>
 		<br>
-Visitor <br> <a href="/register" class="register">Register Now!</a>
+Visitor <br> <a href="/register" class="register">Register Now</a>
 		<br>
 </div>
 </td>
@@ -158,14 +127,14 @@ Visitor <br> <a href="/register" class="register">Register Now!</a>
 <td bgcolor="#0099CC" valign="top">
 <!-- Start of Navigation -->
 <br>
-<a href="/index.html"><img src="/images/but_home_on.gif" width="125" height="26" border="0" alt=""></a><br>
+<a href="/index.html"><img src="/images/but_home_on.gif" width="125" height="26" border="0" alt="Homepage"></a><br>
 </td>
 </tr>
 <tr>
 <td>
 <div>
-<a href="/aboutus/index.html" class="navlink">About Us</a><br>
-<a href="/aboutus/advertise.html" class="navlink">Advertise</a><br><br>
+<a href="/tenders/index.html" class="navlink">Tenders</a><br>
+<a href="/restricted/restricted_subscription.html" target="_top" class="navlink">Subscription</a><br><br>
 </div>
 </td>
 </tr>
@@ -178,7 +147,6 @@ Visitor <br> <a href="/register" class="register">Register Now!</a>
 <a href="/competit/index.html" class="navlink">Competition</a><br>
 <a href="/consumer/index.html" class="navlink">Consumer</a><br>
 <a href="/employ/index.html" class="navlink">Employment</a><br>
-<a href="/emu/index.html" class="navlink">Emu</a><br>
 <a href="/energy/index.html" class="navlink">Energy</a><br>
 <a href="/environ/index.html" class="navlink">Environment</a><br>
 <a href="/factsfig/index.html" class="navlink">Facts &amp; Figures</a><br>
@@ -200,7 +168,6 @@ Visitor <br> <a href="/register" class="register">Register Now!</a>
 </div>
 <img src="/images/but_directories_off.gif" width="125" height="26" border="0" alt="">
 <div>
-<a href="/tenders/index.html" class="navlink">Tenders</a><br>
 <a href="/icc/index.html" class="navlink">Company reports</a><br>
 <a href="/cgi-site/eubconsultants.cgi" class="navlink">Consultants</a><br>
 <a href="/cgi-site/eubjobs.cgi" class="navlink">Jobs directory</a><br>
@@ -208,6 +175,8 @@ Visitor <br> <a href="/register" class="register">Register Now!</a>
 </div>
 <img src="/images/but_help_off.gif" width="125" height="26" border="0" alt="">
 <div>
+<a href="/aboutus/index.html" class="navlink">About Us</a><br>
+<a href="/aboutus/advertise.html" class="navlink">Advertise</a><br>
 <a href="/login" class="navlink">Login</a><br>
 <a href="/logout" class="navlink">Logout</a><br>
 <a href="/register" class="navlink">Register</a><br><br></div>
@@ -216,8 +185,7 @@ Visitor <br> <a href="/register" class="register">Register Now!</a>
 <!--End Navigation-->
 </td>
 </tr>
-<tr>
-<td align="CENTER" bgcolor="#FF6300"><a href="http://www.siftgroups.com" target="_blank"><img src="/images/logos/powered_by_button.gif" width="104" height="23" hspace="0" vspace="0" border="0" align="middle" alt="Powered By Sift Groups"></a></td></tr>
+
 </tbody></table>
 </td><td>&nbsp;</td>
 <td width="99%" valign="top">
@@ -254,16 +222,22 @@ Order Forms</a></b><br>
 We request information from users on our order forms.  Users have to provide contact information (such as name and delivery address) and financial information (such as credit card number and expiry date).  This information is used for billing purposes and to fulfill customer orders.  If we have trouble processing an order, this contact information is used to get in touch with the user.</p>
 <p><b><a name="4">
 Cookies</a></b><br>
-A cookie is a small text file written to a user’s hard drive that contains information about the user.  The cookies do not contain any personal information about users.  Once the user closes his or her browser, the cookie simply terminates.  The use of cookies is now widespread.  The reason we use cookies is to save our users time on the site (so that users do not have to log in with a password more than once); and also so that we can personalise a user's experience of the site.  If a user sets up his browser to reject the cookie, he or she may still use the site.</p>
-<p>
-Some of our business partners use cookies on our site (for example, advertisers).  However, we have no access to or control over these cookies.</p>
+A cookie is a small text file written to a user’s hard drive that
+contains the User ID. The cookies do not contain any personal
+information about users. The use of cookies is now widespread. The
+reason we use cookies is to save our users time on the site (so that
+users do not have to log in with a password more than once); and also so
+that we can personalise a user's experience of the site. If a user sets
+up his browser to reject the cookie, he or she may still use the site
+although functionality will be impaired.</p>
 <p><b><a name="5">
 Advertising</a></b><br>
 EUbusiness works with a third party that serves ads to this site. To find out more about how Engage Business Media manages the privacy of information in conjunction with serving ads on this site, please go to: 
 http://www.engage.com/privacy/ .
 </p><p><b><a name="6">
 Log Files</a></b><br>
-We use IP addresses to analyse trends, administer the site, track user’s movement, and gather broad demographic information for aggregate use.  IP addresses are not linked to personally identifiable information.</p>
+We use IP addresses to analyse trends, administer the site, track user’s
+movement, and gather broad demographic information for aggregate use.</p>
 <p><b><a name="7">
 Links</a></b><br>
 This web site contains links to other sites. Please be aware that EUbusiness is not responsible for the privacy practices of such other sites.  We encourage our users to be aware when they leave our site and to read the privacy statements of these third party sites.  This privacy statement applies solely to information collected by this Web site.</p>
@@ -298,10 +272,10 @@ If we decide to change our privacy policy, we will post those changes on our Hom
 <!-- end main table-->
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 	<tbody><tr>
-		<td><hr width="100%">
+		<td><hr width="100%" noshade="">
 <center>Powered by <a href="http://www.siftgroups.com">SiftGroups</a><br>
-© Copyright © 2001 EUbusiness. All rights reserved.&nbsp;&nbsp;<a href="/help/help_privacy.html">Privacy Statement</a>&nbsp;&nbsp;<a href="/disclaimer.html">Terms and Conditions</a>
-		<br>The copyright of stories to which this page links remain with the original owners<br><a href="http://www.eubusiness.com/" target="_top">EUbusiness</a>- a service of EUbusiness Ltd</center>
+© Copyright © 2002 EUbusiness. All rights reserved.&nbsp;&nbsp;<a href="/help/help_privacy.html">Privacy Statement</a>&nbsp;&nbsp;<a href="/disclaimer.html">Terms and Conditions</a>
+		<br>The copyright of stories to which this page links remain with the original owners<br><a href="http://www.eubusiness.com/" target="_top">EUbusiness.com</a> - a service of EUbusiness Ltd</center>
 		</td>
 	</tr>
 	<tr>
