--- a/t/tr/tru/trumanlibrary.org.html
+++ b/t/tr/tru/trumanlibrary.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the trumanlibrary.org privacy policy that was archived on 2001-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011215051708id_/http%3A//trumanlibrary.org/privacy/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the trumanlibrary.org privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603072910id_/http%3A//www.trumanlibrary.org/privacy/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -18,7 +18,7 @@ NARA, contact, address, reference, questions, inquiries, e-mail, research, priva
 
 
 <body bgcolor="#FFFFFF">
-<p><img src="/kids/images/topbar2.gif" width="600" height="40" alt="Truman Library" border="0" usemap="#Truman"> 
+<p><img src="../kids/images/topbar2.gif" width="600" height="40" alt="Truman Library" border="0" usemap="#Truman"> 
   <map name="Truman"> <area shape="RECT" coords="499,23,557,37" href="/exhibits.htm" alt="Museum exhibits" title="Museum exhibits"> 
     <area shape="RECT" coords="451,21,495,38" href="/truman_search.html" alt="Search this web site" title="Search this web site"> 
     <area shape="RECT" coords="388,21,449,37" href="/library.htm" alt="Archival research" title="archival research"> 
@@ -117,7 +117,7 @@ NARA, contact, address, reference, questions, inquiries, e-mail, research, priva
 
 <hr width="75%" noshade="">
 <font size="2" face="Arial, Helvetica, sans-serif">This web site is written and 
-maintained by staff of the <a href="mailto:library@truman.nara.gov">Harry S. Truman 
+maintained by staff of the <a href="mailto:truman.library@nara.gov">Harry S. Truman 
 Library &amp; Museum</a>, © 2000.</font> <br>
 <font face="Arial, Helvetica, sans-serif" size="2">Last updated: <!-- #BeginDate format:Am1 -->August 22, 2000<!-- #EndDate --></font> 
 <p>&nbsp;</p>
