--- a/d/do/dog/dogomania.com.html
+++ b/d/do/dog/dogomania.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dogomania.com privacy policy that was archived on 2001-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011205121410id_/http%3A//www.dogomania.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dogomania.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603072911id_/http%3A//www.dogomania.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <title>Dog-O-Mania - The biggest dogs related search engine &amp; resource: Privacy policy</title>
@@ -30,7 +30,7 @@
       <table width="100%" border="0">
         <tbody><tr valign="top" bgcolor="#FFFFFF"> 
           <td width="123" bgcolor="#FFFFFF"> 
-            <p><a href="/"><img src="pictures/logo.gif" width="122" height="64" border="0" alt="Dog-O-Mania"></a></p>
+            <p><a href="/"><img src="http://dl.dogomania.com/pictures/logo.gif" width="122" height="64" border="0" alt="Dog-O-Mania"></a></p>
             <p><b><font size="-1"><img src="ybone1.gif" width="20" height="20">Main 
               menu:</font></b><font size="-2"><br>
               - <a href="contact.shtml">Feedback</a><br>
@@ -41,11 +41,10 @@
               - <a href="newsletter.shtml">Newsletter</a><br>
               - <a href="/awards/awards.shtml">Awards</a></font></p>
             <p><b><font size="-1"><img src="ybone1.gif" width="20" height="20">Breeds:</font></b><font size="-2"><br>
-              - <a href="/breed/">Breeds</a><br>
-              - <a href="/gallery/breeders/">Breeders</a><font color="#CC0000"> 
-              New!</font><br>
-              - <a href="/gallery/breeds/">Gallery</a><font color="#CC0000"> New!</font><br>
-              - <a href="/gallery/standards/">Standards</a><br>
+              - <a href="http://www2.dogomania.com/breed/">Breeds</a><br>
+              - <a href="http://www2.dogomania.com/gallery/breeders/">Breeders</a><font size="-2" color="#FF0000"> New!</font><br>
+              - <a href="http://www2.dogomania.com/gallery/breeds/">Gallery</a><font size="-2" color="#FF0000"> New!</font><br>
+              - <a href="http://www2.dogomania.com/gallery/standards/">Standards</a><br>
               </font></p>
             <p><b><font size="-1"><img src="ybone1.gif" width="20" height="20">Names:</font></b><font size="-2"><br>
               - <a href="dog_names.shtml">25000 dog names</a><br>
@@ -57,15 +56,13 @@
               - <a href="entry_forms.shtml">Entry forms</a><br>
               - <a href="titles.shtml">Titles</a></font></p>
             <p><b><font size="-1"><img src="ybone1.gif" width="20" height="20">Discussions:</font></b><font size="-2"><br>
-              - <a href="/forum/list.php?f=2">Read forum</a><br>
-              - <a href="/forum/post.php?f=2">New topic</a><br>
-              - <a href="/forum/search.php?f=2">Search</a></font></p>
+              - <a href="/forum/index.php">Read forum</a><br>
+              - <a href="/forum/posting.php?mode=newtopic&amp;f=1">New topic</a><br>
+              - <a href="/forum/search.php">Search</a></font></p>
             <p><b><font size="-1"><img src="ybone1.gif" width="20" height="20">Resources:</font></b><font size="-2"><br>
               - <a href="fun.shtml">Fun</a><br>
-              - <a href="stories.shtml">Stories</a><font color="#CC0000"> 
-              New!</font><br>
-              - <a href="poetry.shtml">Poetry</a><font color="#CC0000"> 
-              New!</font><br>
+              - <a href="stories.shtml">Stories</a><br>
+              - <a href="poetry.shtml">Poetry</a><br>
               - <a href="art.shtml">Art</a><br>
               - <a href="webgraphics.shtml">Graphics</a><br>
               - <a href="winthemes.shtml">Windows themes</a><br>
@@ -218,8 +215,9 @@
             <address><font size="-1"><a href="contact.shtml">dogs@m4d.com</a></font></address>
             <p><br><br>
 </p><center>
-<a href="http://www.petlinkexchange.com" target="_blank"><img src="http://www.petlinkexchange.com/petlinkexchange/ple.gif" width="468" height="15" alt="PetLinkeXchange Banner Network" border="0"></a><br>
-<a href="http://www.petlinkexchange.com/petlinkexchange/link/ads/ads.pl?member=dogomania;banner=NonSSI;page=01;zone=Dog" target="_blank"><img src="http://www.petlinkexchange.com/petlinkexchange/link/ads/ads.pl?member=dogomania;page=01;zone=Dog" width="468" height="60" border="0"></a>
+<!-- Begin PetLinkeXchange 468x60 Banner Network Code -->
+<br><p></p><center><iframe src="http://www.petlinkexchange.com/petlinkexchange/link/ads/ads.pl?iframe;member=dogomania;zone=Dog" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="NO" width="468" height="60"><A HREF="http://www.petlinkexchange.com/petlinkexchange/link/ads/ads.pl?member=dogomania;banner=NonSSI;page=01;zone=Dog" TARGET="_blank"><IMG SRC="http://www.petlinkexchange.com/petlinkexchange/link/ads/ads.pl?member=dogomania;page=01;zone=Dog" WIDTH=468 HEIGHT=60 ALT="PetLinkeXchange 468x60 Banner Network" BORDER=0></A></iframe><br><a href="http://www.petlinkexchange.com" target="_blank"><img src="http://www.petlinkexchange.com/petlinkexchange/ple.gif" width="468" height="15" alt="PetLinkeXchange 468x60 Banner Network" border="0"></a></center>
+<br><!-- End PetLinkeXchange 468x60 Banner Network Code -->
 </center>
 
  </td>
