--- a/f/fr/fre/free-beauty-tips.com.html
+++ b/f/fr/fre/free-beauty-tips.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the free-beauty-tips.com privacy policy that was archived on 2001-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011215053007id_/http%3A//free-beauty-tips.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the free-beauty-tips.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603073112id_/http%3A//free-beauty-tips.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head><title>Privacy Policy</title>
 <meta name="description" content="Privacy policy at free beauty tips">
@@ -64,7 +64,7 @@ if ((!document.images && navigator.userAgent.indexOf('Mozilla/2.') >= 0) || navi
 document.write('<a href="http://ad.doubleclick.net/jump/sonar.freebeautytips/ros;sz=468x60;ord=' + ord + '?"');
 document.write('<img src="http://ad.doubleclick.net/ad/sonar.freebeautytips/ros;sz=468x60;ord=' + ord + '?"></a>');
 }
-</script><script language="JavaScript1.1" src="http://ad.doubleclick.net/adj/sonar.freebeautytips/ros;sz=468x60;dcopt=ist;abr=!webtv;ord=264706024644904220?"></script>
+</script><script language="JavaScript1.1" src="http://ad.doubleclick.net/adj/sonar.freebeautytips/ros;sz=468x60;dcopt=ist;abr=!webtv;ord=762651075185449300?"></script>
 <noscript>
 <!-- for non javascript browsers and Netscape 2.x -->
 <a href="http://ad.doubleclick.net/jump/sonar.freebeautytips/ros;sz=468x60;num=1234567">
@@ -202,6 +202,18 @@ server, please  <a href="http://www.sonar.com/naiprivacy">click here</a>.
 </td></tr>
 
 <tr><td bgcolor="#cc0066" align="center">
+<font face="verdana, arial, helvetica" size="2"><b><font color="#ffffff">Fun Stuff</font></b></font>    
+</td></tr>
+
+<tr><td align="left">
+<font face="verdana, arial, helvetica" size="2">
+<a href="http://www.1lovecards.com"><font color="#cc0066"><b>Free Greeting Cards</b></font></a><br>
+<a href="http://www.romantic-lyrics.com"><font color="#cc0066"><b>Lyrics</b></font></a><br>
+<a href="http://www.wholefitness.com"><font color="#cc0066"><b>Fitness</b></font></a><br>
+</font>
+</td></tr>
+
+<tr><td bgcolor="#cc0066" align="center">
 <font face="verdana, arial, helvetica" size="2"><b><font color="#ffffff">Resources</font></b></font>    
 </td></tr>
 
@@ -228,7 +240,7 @@ if ((!document.images && navigator.userAgent.indexOf('Mozilla/2.') >= 0) || navi
 document.write('<a href="http://ad.doubleclick.net/jump/sonar.freebeautytips/ros;sz=468x60;ord=' + ord + '?"');
 document.write('<img src="http://ad.doubleclick.net/ad/sonar.freebeautytips/ros;sz=468x60;ord=' + ord + '?"></a>');
 }
-</script><script language="JavaScript1.1" src="http://ad.doubleclick.net/adj/sonar.freebeautytips/ros;sz=468x60;dcopt=ist;abr=!webtv;ord=264706024644904220?"></script>
+</script><script language="JavaScript1.1" src="http://ad.doubleclick.net/adj/sonar.freebeautytips/ros;sz=468x60;dcopt=ist;abr=!webtv;ord=762651075185449300?"></script>
 <noscript>
 <!-- for non javascript browsers and Netscape 2.x -->
 <a href="http://ad.doubleclick.net/jump/sonar.freebeautytips/ros;sz=468x60;num=1234567">
@@ -263,5 +275,5 @@ All logos, names, and trademarks are properties of their respective companies.
 document.write('<LAYER src="http://ad2.doubleclick.net/adl/sonar.freebeautytips/ros;sz=468x60;ord=' + ord + '?" width="468" height="60" visibility="hide" onload="moveToAbsolute(ad1.pageX, ad1.pageY); visibility=\'show\';" clip="468,60"></LAYER>');
 document.write('<LAYER src="http://ad2.doubleclick.net/adl/sonar.freebeautytips/ros;sz=468x60;ord=' + ord + '?" width="468" height="60" visibility="hide" onload="moveToAbsolute(ad2.pageX, ad2.pageY); visibility=\'show\';" clip="468,60"></LAYER>');
 //-->
-</script><layer src="http://ad2.doubleclick.net/adl/sonar.freebeautytips/ros;sz=468x60;ord=264706024644904220?" width="468" height="60" visibility="hide" onload="moveToAbsolute(ad1.pageX, ad1.pageY); visibility='show';" clip="468,60"></layer><layer src="http://ad2.doubleclick.net/adl/sonar.freebeautytips/ros;sz=468x60;ord=264706024644904220?" width="468" height="60" visibility="hide" onload="moveToAbsolute(ad2.pageX, ad2.pageY); visibility='show';" clip="468,60"></layer>
+</script><layer src="http://ad2.doubleclick.net/adl/sonar.freebeautytips/ros;sz=468x60;ord=762651075185449300?" width="468" height="60" visibility="hide" onload="moveToAbsolute(ad1.pageX, ad1.pageY); visibility='show';" clip="468,60"></layer><layer src="http://ad2.doubleclick.net/adl/sonar.freebeautytips/ros;sz=468x60;ord=762651075185449300?" width="468" height="60" visibility="hide" onload="moveToAbsolute(ad2.pageX, ad2.pageY); visibility='show';" clip="468,60"></layer>
 </body></html>
