thecassiopeia.com (archived on 2002-06-03)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "parked",
  "char_count": 6244,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 15.21,
  "homepage_snapshot_redirected_domain": "thecassiopeia.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020525071638id_/http://www.thecassiopeia.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020525071638id_/http%3A//thecassiopeia.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "thecassiopeia.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020603122319id_/http%3A//www.thecassiopeia.com/ppolicy.html",
  "policy_title": "Privacy Policy For Internet Business Consultants For 3rd Millennium",
  "policy_url": "thecassiopeia.com/ppolicy.html",
  "sha1": "cdd59ba69a85d696cac80fee20e839787512d26c",
  "simhash": 3151443464514378439,
  "simhash_updated": true,
  "site_hostname": "thecassiopeia.com",
  "site_url": "http://thecassiopeia.com",
  "smog": 16.45,
  "strict_updated": true,
  "timestamp": "20020603122319",
  "word_count": 950,
  "year": 2002
}

--- a/t/th/the/thecassiopeia.com.html
+++ b/t/th/the/thecassiopeia.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thecassiopeia.com privacy policy that was archived on 2001-10-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011023072937id_/http%3A//www.thecassiopeia.com/ppolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thecassiopeia.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603122319id_/http%3A//www.thecassiopeia.com/ppolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head><title>Privacy Policy For Internet Business Consultants For 3rd Millennium</title>
 <!-- Privacy Policy For Internet Business Consultants always by YOUR side in all YOUR needs on the way to YOUR Success in YOUR Online Business providing YOU with FREE Help, FREE Opportunities, FREE Tools, FREE Top Information necessary for YOUR Success -->
@@ -15,19 +15,19 @@ to paid consultations, incl turnkey projects" name="description">
   <tbody>
   <tr>
     <td face="Verdana, Arial, Helvetica" borderc0lor="#003468" alink="#680030" vlink="#680030" link="#680030" border="1"><font color="#680030" face="Verdana, Arial, Helvetica" size="+1">
-      </font><center><font color="#680030" face="Verdana, Arial, Helvetica" size="+1"><strong><br>
-      <h1>theCassiopeia.com</h1></strong>
-<font color="#680030" size="2"><b>Internet Business Consultants For 3rd Millennium</b> </font></font>
-<br><font color="#003468" face="Verdana, 
-Arial, Helvetica" size="2">
-<font size="+1" color="#680030" face="Verdana, Arial, Helvetica"><h1>
-IBC3000</h1></font></font><font color="#003468" size="3." <br="">&nbsp;<b>and all their associates agree to abide by this</b><br><br>
-<font color="#003468" size="2" face="Verdana, 
-Arial, Helvetica"><br>
+      <center><a target="_blank" href="http://www.thecassiopeia.com/"><img align="left" src="myCasW1.gif" alt="Set On the Pathway To Success" border="0"></a>
+<font color="#680030" face="Verdana, Arial, Helvetica" size="+1">
+<center><br>
+<h1>theCassiopeia.com</h1>
+<font size="2" color="#003468">
+<b>Internet Business Consultants For 3rd Millennium</b>
+<p><br>
+</p></font></center><font size="2" color="#003468"><font color="#003468" size="3">
+<br>&nbsp;<b>and all their associates agree to abide by this</b><br>
+<font color="#680030" size="2" face="Verdana, Arial, Helvetica"><br>
 
 <h2>Privacy Policy</h2>
-</font></font></center><font color="#003468" size="3." <br=""><font color="#003468" size="2" face="Verdana, 
-Arial, Helvetica">
+</font></font></font></font></center><font color="#680030" face="Verdana, Arial, Helvetica" size="+1"><font size="2" color="#003468"><font color="#003468" size="3"><font color="#680030" size="2" face="Verdana, Arial, Helvetica">
 <center>
 <b><font color="#003468" size="-1" face="Verdana, Arial, Helvetica">
 Translate into YOUR Language automatically here&nbsp;&nbsp;&nbsp;
@@ -196,35 +196,28 @@ service to be private correspondence between the sender and
         the third parties and the End-User's personally
         identifiable information.<br>
         &nbsp;<br>
-        To find out more about how Engage Media manages the
-        privacy of information in conjunction with serving ads on one of
-        our Network, please go to <a href="http://www.flycast.com/about_us/about-privacy.html">
-http://www.flycast.com/about_us/about-privacy.html</a>.<br>
-        To find out more about how DoubleClick manages the
-        privacy of information in conjunction with serving ads on
-        our Network, please see the commitment to protect
-        internet user privacy at <a href="http://www.doubleclick.net:8080/privacy_policy">
-http://www.doubleclick.net:8080/privacy_policy</a>.<br>
-        To find out more about how Advertising.com manages the
-        privacy of information in conjunction with serving ads on
-        our Network, please go to <a href="http://www.advertising.com/privacy/index.html">http://www.advertising.com/privacy/index.html</a>.<br>
-        &nbsp;<br><b>
-Conclusion</b><br><br>In case you have any more questions on the topic, please
+        <b>Conclusion</b>
+<br><br>In case you have any more questions on the topic, please
 email us at the above addresses.<br>
 <br><center>
 <font color="#680030" size="2"><b>Internet Business Consultants For 3rd Millennium</b></font></center><font color="#680030" size="2">     
 <br><br>
-      <center><font face="Verdana"><font color="#003468"><font size="-1"><a href="/Portal/Home.html" target="_blank"><b><font color="#003468" alink="#003468" vlink="#003468" link="#003468">Home</font></b></a><font color="#003468" alink="#003468" vlink="#003468" link="#003468"> 
-      <a href="/AboutUs" target="_blank"><font color="#003468" alink="#003468" vlink="#003468" link="#003468">About Us</font></a><font color="#003468" alink="#003468" vlink="#003468" link="#003468"> 
-      <a href="/ppolicy.html" target="_blank"><font color="#003468" alink="#003468" vlink="#003468" link="#003468">Privacy 
-      Policy</font></a><font color="#003468" alink="#003468" vlink="#003468" link="#003468"> <a href="/Portal/ContactUs.html" target="_blank"><font color="#003468" alink="#003468" vlink="#003468" link="#003468">Contact Us</font></a><font color="#003468" alink="#003468" vlink="#003468" link="#003468">
-<font color="#003468" alink="#003468" vlink="#003468" link="#003468">
-<a target="_BLANK" href="/Guide/Links.html">
-<font color="#003468">Link To Us</font></a><font color="#003468">
- </font></font></font></font></font></font></font></font></font></center><font face="Verdana"><font color="#003468"><font size="-1"><font color="#003468" alink="#003468" vlink="#003468" link="#003468">
-      <center><b><font face="Times New Roman"><font color="#003468" size="-1">Copyright 2000-2001 ©© 
-<a target="_blank" href="/">
-<font face="Times New Roman"><font color="#003468" size="-1">theCassiopeia.com</font></font></a><font face="Times New Roman"><font color="#003468" size="-1"> 
-All Rights Reserved</font></font></font></font></b><font face="Times New Roman"><font color="#003468" size="-1"><br></font></font></center><font face="Times New Roman"><font color="#003468" size="-1">
-      <center></center></font></font></font></font></font></font></font></font></font></font></td></tr></tbody></table></font>
+      </font></font></font><center><font color="#680030" size="2" face="Verdana, Arial, Helvetica"><font color="#003468" size="-1" face="Verdana, Arial, Helvetica"><font color="#680030" size="2"><center><font face="Verdana"><font color="003468"><font size="-1">
+<a target="_blank" href="http://www.thecassiopeia.com/Portal/index.html"><b><font size="-1" color="003468" face="verdana,arial,helvetica">Home</font></b></a><font size="-1" color="003468" face="verdana,arial,helvetica">
+<a target="_blank" href="http://www.thecassiopeia.com/SiteMap.html"><b><font size="-1" color="003468" face="verdana,arial,helvetica">Site Map</font></b></a><font size="-1" color="003468" face="verdana,arial,helvetica">
+<a target="_blank" href="http://www.thecassiopeia.com/WebmasterMall/index.html"><b><font size="-1" color="003468" face="verdana,arial,helvetica">Webmasters</font></b></a><font size="-1" color="003468" face="verdana,arial,helvetica">
+<a target="_blank" href="http://www.thecassiopeia.com/ePublishing/index.html"><b><font size="-1" color="003468" face="verdana,arial,helvetica">ePublishing</font></b></a><font size="-1" color="003468" face="verdana,arial,helvetica">
+<a target="_blank" href="http://www.thecassiopeia.com/Guide/index.html"><b><font size="-1" color="003468" face="verdana,arial,helvetica">FREE Guide</font></b></a><font size="-1" color="003468" face="verdana,arial,helvetica">
+<a target="_blank" href="http://www.thecassiopeia.com/WebmasterMall/EzineAdPrices.html"><b><font size="-1" color="003468" face="verdana,arial,helvetica">Advertise</font></b></a><font size="-1" color="003468" face="verdana,arial,helvetica">
+<a target="_blank" href="http://www.thecassiopeia.com/Guide/TellFriends.html"><font size="-1" color="003468" face="verdana,arial,helvetica"><b>Tell Friends</b></font></a><font size="-1" color="003468" face="verdana,arial,helvetica">
+<a target="_blank" href="http://www.thecassiopeia.com/WebLions/index.html"><font size="-1" color="003468" face="verdana,arial,helvetica"><b>Subscribe</b></font></a><font size="-1" color="003468" face="verdana,arial,helvetica">
+<a target="_blank" href="http://www.thecassiopeia.com/InternetBusinessConsultant.html"><font size="-1" color="003468" face="verdana,arial,helvetica">Meet Webmistress</font></a><font size="-1" color="003468" face="verdana,arial,helvetica"> 
+<a target="_blank" href="http://www.thecassiopeia.com/ppolicy.html"><font size="-1" color="003468" face="verdana,arial,helvetica">Privacy Policy</font></a><font size="-1" color="003468" face="verdana,arial,helvetica"> 
+<a target="_blank" href="http://www.thecassiopeia.com/Portal/ContactUs.html"><font size="-1" color="003468" face="verdana,arial,helvetica">Contact Us</font></a><font size="-1" color="003468" face="verdana,arial,helvetica">
+<a target="_BLANK" href="http://www.thecassiopeia.com/Guide/Links.html"><font size="-1" color="003468" face="verdana,arial,helvetica">LinkToUs</font></a><font size="-1" color="003468" face="verdana,arial,helvetica">
+<font face="verdana,arial,helvetica"><font color="003468" size="1">Copyright 2000-2002 ©© 
+<a href="mailto:webmaster@thecassiopeia.com">
+<font color="003468"><b>theCassiopeia.com</b></font></a><font color="003468">
+<br> All Rights Reserved Worldwide</font></font></font></font></font></font></font></font></font></font></font></font></font></font></font></font></font></font></center><font face="Verdana"><font color="003468"><font size="-1"><font size="-1" color="003468" face="verdana,arial,helvetica"><font size="-1" color="003468" face="verdana,arial,helvetica"><font size="-1" color="003468" face="verdana,arial,helvetica"><font face="verdana,arial,helvetica"><font color="003468" size="1"><font color="003468">
+      <center></center></font></font></font></font></font></font></font></font></font></font></font></font></center></font></font></font></font></td></tr></tbody></table></font>
 </body></html>
