sosuave.com (archived on 2002-06-03)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 2405,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.14,
  "homepage_snapshot_redirected_domain": "sosuave.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020326120756id_/http://sosuave.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020326120756id_/http%3A//sosuave.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "sosuave.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020603123406id_/http%3A//www.sosuave.com/home/privacy.htm",
  "policy_title": "The Don Juan Center's Privacy Policy",
  "policy_url": "sosuave.com/home/privacy.htm",
  "sha1": "b49df58ceb1ddf95e6fd9f2b548b178e6c1ae37b",
  "simhash": 977357126103287420,
  "simhash_updated": true,
  "site_hostname": "sosuave.com",
  "site_url": "http://sosuave.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20020603123406",
  "word_count": 415,
  "year": 2002
}

--- a/s/so/sos/sosuave.com.html
+++ b/s/so/sos/sosuave.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sosuave.com privacy policy that was archived on 2001-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011216190004id_/http%3A//www.sosuave.com/home/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sosuave.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603123406id_/http%3A//www.sosuave.com/home/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta name="description" content="Discover the secrets of meeting, dating, and attracting women and girls.  Free advice, tips, and articles on love, romance, relationships, body language, sex, pick up lines, seduction, kissing, flirting, overcoming shyness, and more.">
@@ -10,11 +10,11 @@
 
 <link rel="stylesheet" type="text/css" href="style1.css">
 <meta name="Microsoft Theme" content="artsy3 111, default">
-<meta name="Microsoft Border" content="none, default">
+<meta name="Microsoft Border" content="b, default">
 </head>
 
-<body background="_themes/artsy3/arttilea.jpg" bgcolor="#000033" text="#FFFF99" link="#FFCC00" vlink="#999966" alink="#66FF00"><!--mstheme--><font face="Arial, Helvetica">
-</font><div align="left"><font face="Arial, Helvetica">
+<body background="_themes/artsy3/arttilea.jpg" bgcolor="#000033" text="#FFFF99" link="#FFCC00" vlink="#999966" alink="#66FF00"><!--msnavigation--><table dir="ltr" border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><!--msnavigation--><td valign="top"><!--mstheme--><font face="Arial, Helvetica">
+</font><div align="center"><font face="Arial, Helvetica">
 
 <!--mstheme--></font><table border="0" cellpadding="0" cellspacing="14" width="680" height="1">
   <tbody><tr>
@@ -25,7 +25,7 @@
 <!--mstheme--></font><table border="3" cellpadding="2" cellspacing="0" width="100%" bgcolor="#000000" bordercolordark="#999933" bordercolorlight="#CCCC66">
   <tbody><tr>
     <td width="100%" bgcolor="#000000" background="images/stars.gif"><!--mstheme--><font face="Arial, Helvetica"><form method="POST" action="http://www.sosuave.com/cgi-bin/formmail.cgi">
-      <input type="hidden" name="recipient" value="DJNewslet@aol.com,donjuan-on@mail-list.com"><input type="hidden" name="redirect" value="http://www.sosuave.com/home/thankyou.htm"><input type="hidden" name="required" value="email"><input type="hidden" name="subject" value="Subscribe Contents SS"><div align="center"><center><p><strong><font color="#FF0000"><br>
+      <input type="hidden" name="recipient" value="newsletter@sosuave.com"><input type="hidden" name="redirect" value="http://www.sosuave.com/home/thankyou.htm"><input type="hidden" name="required" value="email"><input type="hidden" name="subject" value="Subscribe Contents SS"><div align="center"><center><p><strong><font color="#FF0000"><br>
       <big>Subscribe</big></font><font color="#FFFF00"><br>
       to The Don Juan Newsletter</font></strong></p>
       </center></div><div align="center"><center><p>Your email address:<br>
@@ -78,16 +78,9 @@
 <p align="center">&nbsp;
 </p>
 
-<p align="center"><a href="http://www.sosuave.com/cgi-bin/absolute/redirect.cgi?link=http://www.sexpositionsguide.com/cgi-bin/ccShare.pl?cmnd=home&amp;id=djcenter" target="_blank">Sex
-Tips</a>
-</p>
-
-<p align="center"><a href="http://refer.ccbill.com/cgi-bin/clicks.cgi?CA=908602&amp;PA=81267&amp;BAN=2"><br>
-</a>
-<a href="http://www.casanovasecrets.com/g.o/djcenter">Do You Make<br>
-These Mistakes<br>
-with Women?</a>
-</p>
+<p align="center"></p><center><p><a href="http://secure.ibill.com/cgi-win/ccard/rscookie.exe?RevShareID=djadvanced&amp;returnto=http://www.advancedmacking.com">
+The Lazy Man's Guide to One-Night Stands</a></p></center>
+<p></p>
 
 <p align="center">&nbsp;
 </p>
@@ -97,7 +90,7 @@ with Women?</a>
 Secrets</a>
 </p>
 
-<!--webbot bot="Include" endspan i-checksum="54450" -->
+<!--webbot bot="Include" endspan i-checksum="16956" -->
 
     <!--mstheme--></font></td>
     <td width="438" height="5" valign="top"><!--mstheme--><font face="Arial, Helvetica">
@@ -127,6 +120,12 @@ Secrets</a>
 </tbody></table><!--mstheme--><font face="Arial, Helvetica">
 </font></div><font face="Arial, Helvetica">
 
-</font><p><font face="Arial, Helvetica">&nbsp;<!--mstheme--></font>
+</font><p><font face="Arial, Helvetica">&nbsp;<!--mstheme--></font><!--msnavigation--></p></td></tr><!--msnavigation--></tbody></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><td><!--mstheme--><font face="Arial, Helvetica">
 
-</p></body></html>
+<p align="center">_______________________________
+</p><p align="center"><font size="1">Copyright © 1998 - 2002, Allen Thompson &amp;
+Global Marketing. All rights reserved.</font></p>
+
+<!--mstheme--></font></td></tr><!--msnavigation--></tbody></table>
+
+</body></html>
