--- a/o/on/one/oneplace.com.html
+++ b/o/on/one/oneplace.com.html
@@ -1,7 +1,9 @@
-<!--The following is the downloaded HTML source of the oneplace.com privacy policy that was archived on 2001-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011216071307id_/http%3A//oneplace.com/About_Us/PrivacyPolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the oneplace.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603123418id_/http%3A//oneplace.com/About_Us/PrivacyPolicy.asp) for the most accurate reproduction.-->
 
 <html><head><title>OnePlace.com  - Privacy Policy</title>
+<meta http-equiv="PICS-Label" content="(PICS-1.1 &quot;http://www.classify.org/safesurf/&quot; l gen true for &quot;http://www.oneplace.com&quot; r (SS~~000 1))">
+<meta http-equiv="pics-label" content="(pics-1.1 &quot;http://www.icra.org/ratingsv02.html&quot; l gen true for &quot;http://www.oneplace.com&quot; r (cb 1 lz 1 nz 1 oz 1 vz 1) &quot;http://www.rsac.org/ratingsv01.html&quot; l gen true for &quot;http://www.oneplace.com&quot; r (n 0 s 0 v 0 l 0))">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta name="keywords" content="
 audio,AM,Bible,biblical,bible,broadcast,bible,chapel,children,broadcast,Christ,broadcast,Christ,Christian,church
@@ -25,8 +27,8 @@ audio,AM,Bible,biblical,bible,broadcast,bible,chapel,children,broadcast,Christ,b
 	<td bgcolor="#ffffff" width="50%"><img src="/images/spacer.gif" width="1" height="89" alt=""></td>
 <td rowspan="2"><table border="0" cellpadding="0" cellspacing="0">
 	<tbody><tr bgcolor="#ffffff">
-		<td rowspan="2"><a href="/"><img src="/Local_Images/Headers/Logo-OnePlace.gif" width="266" height="89" border="0" alt="oneplace.com"></a></td>
-		<td width="468" height="66" valign="top" bgcolor="#ffffff"><iframe src="http://ads.oneplace.com:8080/hserver/site=ONEPLACE/area=INFO/POSITION=HEADER/AAMSZ=468x60/ACC_RANDOM=775532311200?" noresize="" scrolling="no" hspace="0" vspace="0" frameborder="0" marginheight="0" marginwidth="0" width="468" height="60"><script src="http://ads.oneplace.com:8080/jnserver/site=ONEPLACE/area=INFO/POSITION=HEADER/AAMSZ=468x60/ACC_RANDOM=775532311200?" type="text/javascript" language="JavaScript1.1"></script><noscript><a href="http://ads.oneplace.com:8080/accipiter/adclick/site=ONEPLACE/area=INFO/POSITION=HEADER/AAMSZ=468x60/ACC_RANDOM=775532311200?"><img src="http://ads.oneplace.com:8080/accipiter/nserver/site=ONEPLACE/area=INFO/POSITION=HEADER/AAMSZ=468x60/ACC_RANDOM=775532311200?"></a></noscript></iframe></td>
+		<td rowspan="2"><a href="http://www.oneplace.com/"><img src="/Local_Images/Headers/Logo-OnePlace.gif" width="266" height="89" border="0" alt="oneplace.com"></a></td>
+		<td width="468" height="66" valign="top" bgcolor="#ffffff"><iframe src="http://ads.oneplace.com:8080/hserver/site=ONEPLACE/area=MINISTRY.LISTEN/POSITION=HEADER/AAMSZ=468x60/PAGEID=44788673/ACC_RANDOM=745058983564?" noresize="" scrolling="no" hspace="0" vspace="0" frameborder="0" marginheight="0" marginwidth="0" width="468" height="60"><script src="http://ads.oneplace.com:8080/jnserver/site=ONEPLACE/area=MINISTRY.LISTEN/POSITION=HEADER/AAMSZ=468x60/PAGEID=44788673/ACC_RANDOM=745058983564?" type="text/javascript" language="JavaScript1.1"></script><noscript><a href="http://ads.oneplace.com:8080/accipiter/adclick/site=ONEPLACE/area=MINISTRY.LISTEN/POSITION=HEADER/AAMSZ=468x60/PAGEID=44788673/ACC_RANDOM=745058983564?"><img src="http://ads.oneplace.com:8080/accipiter/nserver/site=ONEPLACE/area=MINISTRY.LISTEN/POSITION=HEADER/AAMSZ=468x60/PAGEID=44788673/ACC_RANDOM=745058983564?"></a></noscript></iframe></td>
 	</tr>
 	<tr>
 		<td><img src="/Local_Images/Headers/nav-bar-top.gif" width="468" height="23"></td>
@@ -35,16 +37,16 @@ audio,AM,Bible,biblical,bible,broadcast,bible,chapel,children,broadcast,Christ,b
 		<td colspan="2"><table border="0" cellpadding="0" cellspacing="0">
 			<tbody><tr bgcolor="#336699">
 			<td bgcolor="#336699"><img src="/images/spacer.gif" width="12" height="18"></td>
-			<td><a href="/"><img src="/Local_Images/Headers/btn-home.gif" width="46" height="18" border="0" alt="home"></a></td>
-			<td><a href="/Contact_Us/"><img src="/Local_Images/Headers/btn-contact.gif" width="56" height="18" border="0" alt="contact"></a></td>
-			<td><a href="/About_Us/"><img src="/Local_Images/Headers/btn-about.gif" width="49" height="18" border="0" alt="about"></a></td>
-			<td><a href="/Help/"><img src="/Local_Images/Headers/btn-help.gif" width="44" height="18" border="0" alt="help"></a></td>
+			<td><a href="http://www.oneplace.com/"><img src="/Local_Images/Headers/btn-home.gif" width="46" height="18" border="0" alt="home"></a></td>
+			<td><a href="http://www.oneplace.com/Contact_Us/"><img src="/Local_Images/Headers/btn-contact.gif" width="56" height="18" border="0" alt="contact"></a></td>
+			<td><a href="http://www.oneplace.com/About_Us/"><img src="/Local_Images/Headers/btn-about.gif" width="49" height="18" border="0" alt="about"></a></td>
+			<td><a href="http://www.oneplace.com/Help/"><img src="/Local_Images/Headers/btn-help.gif" width="44" height="18" border="0" alt="help"></a></td>
 			<td bgcolor="#336699"><img src="/images/spacer.gif" width="23" height="18"></td>
-			<td><a href="/Ministries/"><img src="/Local_Images/Headers/btn-ministries.gif" width="88" height="18" border="0" alt="MINISTRIES"></a></td>
-			<td><a href="/Live_Radio/"><img src="/Local_Images/Headers/btn-live_radio.gif" width="97" height="18" border="0" alt="LIVE RADIO"></a></td>
-			<td><a href="/OneAnswer/"><img src="/Local_Images/Headers/btn-oneanswer.gif" width="102" height="18" border="0" alt="ONEANSWER"></a></td>
-			<td><a href="/Articles/"><img src="/Local_Images/Headers/btn-text_articles.gif" width="109" height="18" border="0" alt="TEXT ARTICLES"></a></td>
-			<td><a href="/sender.asp?url=http://www.oneplace.com/Shopping/&amp;event=OP_Nav_Shopping"><img src="/Local_Images/Headers/btn-shopping.gif" width="102" height="18" border="0" alt="SHOPPING"></a></td>
+			<td><a href="http://www.oneplace.com/Ministries/"><img src="/Local_Images/Headers/btn-ministries.gif" width="88" height="18" border="0" alt="MINISTRIES"></a></td>
+			<td><a href="http://www.oneplace.com/Live_Radio/"><img src="/Local_Images/Headers/btn-live_radio.gif" width="97" height="18" border="0" alt="LIVE RADIO"></a></td>
+			<td><a href="http://www.oneplace.com/OneAnswer/"><img src="/Local_Images/Headers/btn-oneanswer.gif" width="102" height="18" border="0" alt="ONEANSWER"></a></td>
+			<td><a href="http://www.oneplace.com/Articles/"><img src="/Local_Images/Headers/btn-text_articles.gif" width="109" height="18" border="0" alt="TEXT ARTICLES"></a></td>
+			<td><a href="http://www.oneplace.com/sender.asp?url=http://www.oneplace.com/Shopping/&amp;event=OP_Nav_Shopping"><img src="/Local_Images/Headers/btn-shopping.gif" width="102" height="18" border="0" alt="SHOPPING"></a></td>
 		</tr></tbody></table></td></tr>
 </tbody></table></td>
 	<td bgcolor="#ffffff" width="50%"><img src="/images/spacer.gif" width="1" height="89" alt=""></td>
@@ -105,6 +107,20 @@ our audience.
 
 <p><font face="arial" size="4">Voluntary Information</font>
 </p>
+<p>
+<b>Special Offers</b>
+<br>
+From time-to-time, OnePlace.com, its affiliated ministries and/or its affiliated radio stations are able to provide to you special offers of products and services.  In the course of providing these offerings it is necessary to gather personally identifiable information such as your name, age, email address and telephone number. Your acceptance of these offers is completely voluntary, but if you do not correctly enter any information required, you may not receive the product or service offered.  We may use this information: 
+</p><ul>
+<li>To ensure proper delivery of the product or service 
+</li><li>To view statistics and conduct basic research 
+</li><li>To send you information about OnePlace.com 
+</li><li>To give to select ministries on our site, who may send you promotional material 
+</li><li>To give to select radio stations, who may send you promotional material 
+</li><li>To give to our advertisers, who may send you information about their products and services 
+</li></ul>
+<p></p>
+
 </a><p><a name="required">
 <b>Surveys</b>
 <br>OnePlace.com features an optional </a><a href="/About_Us/Listener_Survey/">Listener Survey</a>, in which we ask for 
@@ -249,16 +265,15 @@ email to: </a><a href="mailto:feedback@oneplace.com">feedback@oneplace.com</a>.
 </b>
 </font>
 <img src="/images/pxl-cccccc.gif" width="550" height="2" vspace="6">
-<iframe src="http://ads.oneplace.com:8080/hserver/site=ONEPLACE/area=INFO/POSITION=FOOTER/AAMSZ=468x60/ACC_RANDOM=700958693027?" noresize="" scrolling="no" hspace="0" vspace="0" frameborder="0" marginheight="0" marginwidth="0" width="468" height="60"><script src="http://ads.oneplace.com:8080/jnserver/site=ONEPLACE/area=INFO/POSITION=FOOTER/AAMSZ=468x60/ACC_RANDOM=700958693027?" type="text/javascript" language="JavaScript1.1"></script><noscript><a href="http://ads.oneplace.com:8080/accipiter/adclick/site=ONEPLACE/area=INFO/POSITION=FOOTER/AAMSZ=468x60/ACC_RANDOM=700958693027?"><img src="http://ads.oneplace.com:8080/accipiter/nserver/site=ONEPLACE/area=INFO/POSITION=FOOTER/AAMSZ=468x60/ACC_RANDOM=700958693027?"></a></noscript></iframe>
-<img src="/images/pxl-cccccc.gif" width="550" height="2" vspace="6">
+<iframe src="http://ads.oneplace.com:8080/hserver/site=ONEPLACE/area=MINISTRY.LISTEN/POSITION=FOOTER/AAMSZ=468x60/PAGEID=44788673/ACC_RANDOM=670485365390?" noresize="" scrolling="no" hspace="0" vspace="0" frameborder="0" marginheight="0" marginwidth="0" width="468" height="60"><script src="http://ads.oneplace.com:8080/jnserver/site=ONEPLACE/area=MINISTRY.LISTEN/POSITION=FOOTER/AAMSZ=468x60/PAGEID=44788673/ACC_RANDOM=670485365390?" type="text/javascript" language="JavaScript1.1"></script><noscript><a href="http://ads.oneplace.com:8080/accipiter/adclick/site=ONEPLACE/area=MINISTRY.LISTEN/POSITION=FOOTER/AAMSZ=468x60/PAGEID=44788673/ACC_RANDOM=670485365390?"><img src="http://ads.oneplace.com:8080/accipiter/nserver/site=ONEPLACE/area=MINISTRY.LISTEN/POSITION=FOOTER/AAMSZ=468x60/PAGEID=44788673/ACC_RANDOM=670485365390?"></a></noscript></iframe><img src="/images/pxl-cccccc.gif" width="550" height="2" vspace="6">
 </center>
-<font color="#336699" face="arial" size="1">&nbsp; © Copyright 2001, OnePlace, LLC. All rights reserved.
+<font color="#336699" face="arial" size="1">&nbsp; © Copyright 2002, OnePlace, LLC. All rights reserved.
 <a href="/About_Us/TermsOfUse.asp">Terms of Use</a>.
 </font>
 <br><br>
 </td>
 <td width="180" align="center" valign="middle">
-<a href="javascript:void(window.open('/email_a_friend.asp?url=%2FAbout%5FUs%2FPrivacyPolicy%2Easp','emailafriend','toolbar=no,location=no,status=no,directories=no,menubar=no,scrolling=yes,scrollbars=yes,width=580,height=400,resizable=yes'));"><img src="/images/footer/btn-emailafriend.jpg" width="137" height="65" alt="E-mail this page to a friend" border="0"></a></td>
+</td>
 </tr>
 </tbody></table><br></td>
 </tr></tbody></table>
