--- a/s/st/stu/stumpsparty.com.html
+++ b/s/st/stu/stumpsparty.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the stumpsparty.com privacy policy that was archived on 2001-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011212072811id_/http%3A//stumpsparty.com/service.cfm%3Fpage%3Dsite_security%26SecID%3D10%23privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stumpsparty.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603124214id_/http%3A//www.stumpsparty.com/service.cfm%3Fpage%3Dsite_security%26SecID%3D10%23privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 FINAL//EN"><html><head><link href="corp_style.css" rel="stylesheet" type="text/css">
 <title>Stump Printing Co., Inc. : Site Security and Privacy</title></head>
 <body bgcolor="#FFFFFF">
 <table width="706" border="0" cellspacing="0" cellpadding="0" align="center">
   <tbody><tr background="graphics/homepage/color.gif"> 
-    <td colspan="3"><a href="index.cfm"><img src="graphics/homepage/inside-header.gif" width="706" height="69" alt="Stump Printing Co., Inc.:  America's Premiere Party &amp; Prom Supplier Since 1926" border="0"></a></td>
+    <td colspan="3"><a href="index.cfm"><img src="graphics/homepage/inside-header.gif" width="706" height="72" alt="Stump Printing Co., Inc.:  America's Premiere Prom &amp; Party Supplier Since 1926" border="0"></a></td>
   </tr>
   <tr> 
     <td bgcolor="#990099" rowspan="2" width="4"><img src="graphics/homepage/shim.gif" width="4" height="200"></td>
@@ -14,21 +14,6 @@
       <table width="100%" border="0" cellspacing="10" cellpadding="0">
         <tbody><tr> 
           <td> 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	
 
 
 
@@ -43,7 +28,7 @@
         number one concern. We are pleased to tell you about the measures we have 
         taken to ensure your security. </p>
       <p>We have followed and surpassed all industry standards necessary for a 
-        secure site. We are a <a href="https://digitalid.verisign.com/cgi-bin/Xquery.exe?Template=authCertByIssuer&amp;form_file=../fdf/authCertByIssuer.fdf&amp;issuerSerial=c4e738fe4f6bc668bbc8cefc406cb9fe" target="_blank">VeriSign™</a> 
+        secure site. We are a <a href="https://digitalid.verisign.com/cgi-bin/Xquery.exe?Template=authCertByIssuer&amp;form_file=../fdf/authCertByIssuer.fdf&amp;issuerSerial=9d41a143be36636b86be4e24b643fa63" target="_blank">VeriSign™</a> 
         secure site. This means that all information sent to our site is encrypted 
         and protected against disclosure to third parties. </p>
       <p>Our servers use SSL (Secure Sockets Layer). This is an advanced technology 
@@ -129,7 +114,7 @@
         we do request e-mail consent from a parent if we receive any information 
         from a child under 13. </p>
       <p>If you at any time have questions about our Privacy Policy, please feel 
-        free to e-mail us <a href="mailto:csr@StumpsParty.com">Customer Service</a>, 
+        free to e-mail us <a href="mailto:csr@stumpsparty.com">Customer Service</a>, 
         call toll free at 1-800-348-5084 or write 
         to us at:
       </p><div align="center"><b>Stump Printing Co., Inc.</b><br>
@@ -142,7 +127,6 @@
 
 
  
-
 
 
 </td>
@@ -188,7 +172,7 @@
           <td width="9%"><a class="l-bold" onmouseover="window.status='Stumps Site Security';return true" onmouseout="window.status='';return true" href="service.cfm?page=site_security&amp;SecID=10">Site<br>
             Security</a></td>
           <td width="83%"><span class="c-bold">Stump Printing Co., Inc.</span><span class="credits"> 
-            ©2001, All Rights Reserved<br>
+            ©2002, All Rights Reserved<br>
             Stump Printing Co., Inc. • One Party Place 
             • P. O. Box 305 • South Whitley, IN 46787-0305<br>
             </span><span class="c-bold">telephone </span><span class="credits">1-800-348-5084 
